tests/NormalTests/paczka2/big_fuzzy/97206029.err
Error in line 9: p9uOVeMzl S593 4P,2
Error in line 13: S870 S870 -4,2
Error in line 11: S870 S870 94,5
Error in line 25: S870 A109 72,8
Error in line 30: nTd4YUS8w A777 33,3
Error in line 31: 9KSV A777 69,0
Error in line 45: AosIviNPipm S593 91,0
Error in line 43: 9KSV S593 224,5
Error in line 54: nTd4YUS8w A777 57,4
Error in line 57: AosIviNPipm A777 67,7
Error in line 61: 78MlYxbuKk A109 98,8
Error in line 62: 78MlYxbuKk A777 83,2
Error in line 53: p9uOVeMzl S593 52,2
Error in line 83: p9uOVeMzl S870 95,2
Error in line 80: RHVnt2xc2 A777 95,4
Error in line 76: 9KSV A109 62,7
Error in line 86: RHVnt2xc2 S870 7,8
Error in line 97: 78MlYxbuKk A777 68,1
Error in line 106: 9KSV S593 6(,7
Error in line 104: nTd4YUS8w S593 34,7
Error in line 111: nTd4YUS8w A777 71,3
Error in line 130: AosIviNPipm S870 235,9
Error in line 131: 9KSV S593 90,7
Error in line 137: p9uOVeMzl A109 2,8
Error in line 134: AosIviNPipm A777 42,1
Error in line 152: nTd4YUS8w S593 0,44
Error in line 150: nTd4YUS8w A777 80,1
Error in line 145: AosIviNPipm S870 63,7
Error in line 151: 9KSV A109 0,0
Error in line 161: p9uOVeMzl S593 92,7
Error in line 166: RHVnt2xc2 A109 -2,2
Error in line 165: nTd4YUS8w S593 108,7
Error in line 167: 78MlYxbuKk A109 40,4
Error in line 171: 78MlYxbuKk A777 73,2
Error in line 168: 9KSV A109 91,7
Error in line 189: 9KSV S593 35,7
Error in line 193: AosIviNPipm A777 90,2
Error in line 208: RHVnt2xc2 S593 65,1
Error in line 217: 78MlYxbuKk S870 52,3
Error in line 210: p9uOVeMzl S593 74,5
Error in line 220: 9KSV A109 37,5
Error in line 229: AosIviNPipm A109 19,1
Error in line 241: S870 S870 31,0
Error in line 243: p9uOVeMzl A109 31,8
Error in line 244: S870 A109 61,3
